--- a/index.html
+++ b/index.html
@@ -16,11 +16,22 @@
         <li class="item"><a href="/02.html">02</a></li>
         <li class="item"><a href="/03.html">03</a></li>
       </ul>
-    </div>
-    <div id="layout">
-      <!-- COLOQUE O SEU CÓDIGO AQUI DENTRO DESSA DIV -->
-    </div>
-  </div>
-</body>
+  <div id="layout">
+    <div class="conteudo-principal">
+      
+      <div class="conteudo-central">
+        <div class="topo" id="cabecalho-site">Cabeçalho</div>
+        <div class="topo abaixo">
+          <div class="bloco-artigo" id="artigo-esquerdo">Artigo</div>
+          <div class="bloco-artigo" id="artigo-direito">Artigo</div>
+        </div>
+      </div>
 
+      <div class="menu-lateral" id="navegacao">Menu</div>
+    </div>
+
+    <div class="rodape" id="rodape-site">Rodapé</div>
+  </div>
+
+</body>
 </html>
