--- a/02.html
+++ b/02.html
@@ -2,24 +2,61 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flex-box</title>
-  <link rel="stylesheet" href="/css/estilo.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Layout Flexível</title>
+  <link rel="stylesheet" href="/css/estilo.css" />
 </head>
 
 <body>
-  <div id="container">
-    <div id="menu">
+  <div id="principal">
+    <nav id="barra-lateral">
       <ul>
-        <li class="item"><a href="/index.html">01</a></li>
-        <li class="item"><a href="/02.html">02</a></li>
-        <li class="item"><a href="/03.html">03</a></li>
+        <li class="menu-item"><a href="/index.html">Início</a></li>
+        <li class="menu-item"><a href="/02.html">Sobre</a></li>
+        <li class="menu-item"><a href="/03.html">Contato</a></li>
       </ul>
-    </div>
-    <div id="layout">
+    </nav>
 
-      <!-- COLOQUE O SEU CÓDIGO AQUI DENTRO DESSA DIV -->
+    <div id="estrutura-principal">
+      <div class="botoes-superiores">
+        <button>Primeiro</button>
+        <button>Segundo</button>
+        <button>Terceiro</button>
+        <button>Quarto</button>
+        <button>Quinto</button>
+      </div>
+
+      <header class="topo-pagina">
+        <h1>Bem-vindo ao meu site</h1>
+      </header>
+
+      <div class="conteudo-central">
+        <nav class="menu-secundario">
+          <h2>Navegação</h2>
+          <ul>
+            <li>Ícone A</li>
+            <li>Ícone B</li>
+            <li>Ícone C</li>
+          </ul>
+        </nav>
+
+        <section class="texto-principal">
+          <h2>Artigo Principal</h2>
+          <p>
+            Aproveite cada momento como se fosse uma chance única para crescer e descobrir algo novo todos os dias.
+          </p>
+        </section>
+
+        <aside class="anuncios">
+          <h2>Publicidade</h2>
+          <p>Espaço reservado para anúncios interessantes.</p>
+        </aside>
+      </div>
+
+      <footer class="rodape-pagina">
+        <h2>© 2025 Matheus Ruhan Costa</h2>
+      </footer>
     </div>
   </div>
 </body>
