--- a/index.html
+++ b/index.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Flex-box</title>
-  <link rel="stylesheet" href="/css/estilo.css">
+  <link rel="stylesheet" href="css/estilo.css">
 </head>
-
 <body>
   <div id="container">
     <div id="menu">
       <ul>
-        <li class="item"><a href="/index.html">01</a></li>
-        <li class="item"><a href="/02.html">02</a></li>
-        <li class="item"><a href="/03.html">03</a></li>
+        <li class="item"><a href="index.html">01</a></li>
+        <li class="item"><a href="segundoindex.html">02</a></li>
+        <li class="item"><a href="terceiroindex.html">03</a></li>
       </ul>
-  <div id="layout">
-    <div class="conteudo-principal">
-      
-      <div class="conteudo-central">
-        <div class="topo" id="cabecalho-site">Cabeçalho</div>
-        <div class="topo abaixo">
-          <div class="bloco-artigo" id="artigo-esquerdo">Artigo</div>
-          <div class="bloco-artigo" id="artigo-direito">Artigo</div>
-        </div>
-      </div>
-
-      <div class="menu-lateral" id="navegacao">Menu</div>
     </div>
 
-    <div class="rodape" id="rodape-site">Rodapé</div>
+    <div id="layout">
+      <div class="conteudo-principal">
+        <div class="conteudo-central">
+          <div class="topo" id="cabecalho-site">Cabeçalho</div>
+          <div class="topo abaixo">
+            <div class="bloco-artigo" id="artigo-esquerdo">Artigo</div>
+            <div class="bloco-artigo" id="artigo-direito">Artigo</div>
+          </div>
+        </div>
+        <div class="menu-lateral" id="navegacao">Menu</div>
+      </div>
+      <div class="rodape" id="rodape-site">Rodapé</div>
+    </div>
   </div>
-
 </body>
 </html>
